--- a/src/app/components/recordingComponent/recording.module.scss
+++ b/src/app/components/recordingComponent/recording.module.scss
@@ -6,6 +6,10 @@
   background: transparent;
   border:none;
 
+  @media screen and (max-height: 668px) {
+    margin-top:2rem;
+  }
+
 
   .recording {
     height: 60px;
